# clockify-tui

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
clockify_tui/: __init__.py  __main__.py  clockify.py  config.py  connect.py  task.py  ui.py  workspaces.py
clockify_tui/data/: config_template.toml
tests/: test_clockify_tui.py
