[tool.poetry]
name = "clockify_tui"
version = "0.1.0"
description = "An unofficial terminal interface for the Clockify productivity app."
authors = ["Alex Dewar <a.dewar@imperial.ac.uk>"]
include = [{path = "clockify_tui/data", format = ["sdist", "wheel"]}]

[tool.poetry.scripts]
clockify-tui = "clockify_tui:main"

[tool.poetry.dependencies]
python = "^3.12"
blessed = "^1.20.0"
click = "^8.1.7"
platformdirs = "^4.3.6"
pydantic = "^2.10.3"
clockify-api-client = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.3"
pytest-mock = "^3.14.0"
pre-commit = "^4.0.1"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = false
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=clockify_tui --cov-report=html --doctest-modules --ignore=clockify_tui/__main__.py"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF"  # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"] # Missing docstring in public module, Missing docstring in public package
