[project]
name = "clockify_tui"
version = "0.1.0"
description = "An unofficial terminal interface for the Clockify productivity app."
authors = [{ name = "Alex Dewar", email = "a.dewar@imperial.ac.uk" }]
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.20.0,<2",
    "click>=8.1.7,<9",
    "platformdirs>=4.3.6,<5",
    "pydantic>=2.12.5,<3",
    "clockify-api-client>=0.1.0,<0.2",
]

[project.scripts]
clockify-tui = "clockify_tui:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<10",
    "pytest-cov>=5.0.0,<8",
    "pytest-mypy>=0.10.3,<1.1",
    "pytest-mock>=3.14.0,<4",
    "pre-commit>=4.0.1,<5",
    "ruff>=0.7.0,<0.16",
]

[tool.hatch.build.targets.sdist.force-include]
"clockify_tui/data" = "clockify_tui/data"

[tool.hatch.build.targets.wheel.force-include]
"clockify_tui/data" = "clockify_tui/data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = false
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=clockify_tui --cov-report=html --doctest-modules --ignore=clockify_tui/__main__.py"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF"  # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"] # Missing docstring in public module, Missing docstring in public package
